@@ -2398,6 +2398,11 @@
             It will wait up to 15 seconds.</TD>
         </TR>
         <TR>
+          <TD>LowDoseChangeAtZeroIS</TD>
+          <TD>Set to 1 to have the Low Dose area switching routine zero out image shift 
+            before changing areas and restore the previous shift afterwards.</TD>
+        </TR>
+        <TR>
           <TD>PiezoScaling # # # # #</TD>
           <TD>Scaling and range information for a piezo drive controlled by a piezo plugin.&nbsp; 
             Follow with 6 numbers: plugin number (numbered from 0); number (from 0) of the 
